Homework/file/1-deployment-netology-3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-ntl-3
  labels:
    app: nginx
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.22.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
      - name: multitool
        image: praqma/network-multitool:latest
        imagePullPolicy: IfNotPresent
        lifecycle:
          postStart:
            exec:
              command: ["sleep", "10"]
          preStop:
            exec:
              command: ["sleep", "30"]
