Homework/file/1-pod-multitool.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multitool
spec:
  containers:
  - name: multitool
    image: praqma/network-multitool:latest
    imagePullPolicy: IfNotPresent
    lifecycle:
      postStart:
        exec:
          command: ["sleep", "10"]
      preStop:
        exec:
          command: ["sleep", "30"]
