Homework/file/2-nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector: 
    app: nginx
  ports:
  - name: web      
    port: 80
    protocol: TCP
