Homework/file/2-ntl-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntl-svc-nodeport
  namespace: default
spec:
  selector: 
    app: nginx
  ports:
  - name: web      
    port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 30080
  type: NodePort
