Homework/file/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-multitool
  labels:
    app: multitool
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitool
  template:
    metadata:
      labels:
        app: multitool
    spec:
      containers:
      - name: multitool
        image: praqma/network-multitool:latest
        imagePullPolicy: IfNotPresent
        lifecycle:
          postStart:
            exec:
              command: ["sleep", "10"]
          preStop:
            exec:
              command: ["sleep", "30"]
---
apiVersion: v1
kind: Service
metadata:
  name: backend-multitool-svc
  namespace: default
spec:
  selector: 
    app: multitool
  ports:
  - name: backend
    port: 9002
    targetPort: 8080
    protocol: TCP
    nodePort: 30081
  type: NodePort
